# Luch

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: CondingGuidelines
include/Husky/: Application.h  ArrayProxy.h  Assert.h  BaseApplication.h  BaseObject.h  FileStream.h  Format.h  GeometryGenerator.h  ImageAspects.h  IndexType.h  MeshGeometry.h  PrimitiveTopology.h  RefPtr.h  ResultValue.h  SampleCount.h  ShaderStage.h  SharedPtr.h  StaticVector.h  Stream.h  Types.h  UniquePtr.h  VectorTypes.h  Version.h  Vertex.h  Vulkan.h
include/Husky/Math/: Math.h
include/Husky/Platform/Win32/: WndProcDelegate.h
include/Husky/Render/: Common.h  DeferredRenderer.h  ForwardRenderer.h  TextureUploader.h
include/Husky/Scene/: Camera.h  Primitive.h
include/Husky/SceneV1/: Accessor.h  Buffer.h  BufferSource.h  Camera.h  Forwards.h  Image.h  IndexBuffer.h  Light.h  Mesh.h  Node.h  PbrMaterial.h  Primitive.h  Sampler.h  Scene.h  SceneProperties.h  Texture.h  VertexBuffer.h
include/Husky/SceneV1/Loader/: LoaderUtils.h  glTFLoader.h
include/Husky/Vulkan/: Attachment.h  Buffer.h  BufferView.h  CommandBuffer.h  CommandPool.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetBinding.h  DescriptorSetLayout.h  DescriptorSetLayoutCreateInfo.h  DescriptorSetWrites.h  Device.h  DeviceBufferView.h  Fence.h  Format.h  Forwards.h  Framebuffer.h  FramebufferCreateInfo.h  GlslShaderCompiler.h  GraphicsDevice.h  Image.h  ImageAspects.h  ImageView.h  IndexBuffer.h  IndexBufferObject.h  IndexBuffert.h  IndexType.h  PIpelineCache.h  PhysicalDevice.h  Pipeline.h  PipelineBarrier.h  PipelineCreateInfo.h  PipelineLayout.h  PipelineLayoutCreateInfo.h  PushConstantRange.h  Queue.h  QueueInfo.h  RenderPass.h  RenderPassCreateInfo.h  SampleCount.h  (+19 more)
include/Husky/glTF2/: glTF.h  glTFParser.h
include/common/Husky/: ArrayProxy.h  BaseApplication.h  FileStream.h  IndexType.h  RefPtr.h  RenderItem.h  Stream.h  Types.h  VectorTypes.h  Version.h  Vulkan.h
include/common/Husky/ECS/: Component.h  ComponentType.h  Entity.h  Forwards.h  System.h
include/common/Husky/Graphics/: Attachment.h  BlendFactor.h  BlendOperation.h  Buffer.h  BufferCreateInfo.h  BufferUsageFlags.h  Color.h  ColorComponentFlags.h  CommandPool.h  CommandQueue.h  CompareFunction.h  ComputeCommandList.h  CopyCommandList.h  CullMode.h  DescriptorPool.h  DescriptorPoolCreateInfo.h  DescriptorSet.h  DescriptorSetBinding.h  DescriptorSetLayout.h  DescriptorSetLayoutCreateInfo.h  DescriptorSetType.h  Format.h  FrontFace.h  GraphicsCommandList.h  GraphicsDevice.h  GraphicsForwards.h  GraphicsObject.h  GraphicsResult.h  GraphicsResultValue.h  IndexType.h  PhysicalDevice.h  PipelineLayout.h  PipelineLayoutCreateInfo.h  PipelineState.h  PipelineStateCreateInfo.h  Point2D.h  PolygonMode.h  PrimitiveTopology.h  Rect.h  RenderPass.h  (+25 more)
include/common/Husky/Math/: Math.h
include/common/Husky/Render/: Common.h  DeferredRenderer.h  DeferredRenderer2.h  FormatUtils.h  ForwardRenderer.h  RenderContext.h  RenderForwards.h  RenderUtils.h  Renderer.h  ShaderDefines.h  SharedBuffer.h  TextureUploader.h
include/common/Husky/SceneV1/: AlphaMode.h  AttributeSemantic.h  Buffer.h  Camera.h  CameraType.h  CubeTexture.h  Image.h  IndexBuffer.h  Light.h  Mesh.h  Node.h  PbrMaterial.h  Primitive.h  Sampler.h  Scene.h  SceneProperties.h  SceneV1Forwards.h  Texture.h
include/common/Husky/Vulkan/: Attachment.h  DescriptorPool.h  DescriptorSetLayout.h  DescriptorSetWrites.h  (+49 more)
include/common/Luch/: ArrayProxy.h  Assert.h  BaseApplication.h  BaseObject.h  FileStream.h  Flags.h  MouseNodeController.h  Point2.h  Point3.h  Rect2.h  Rect3.h  RefPtr.h  ResultValue.h  SharedPtr.h  Size2.h  Size3.h  Stream.h  Types.h  UniquePtr.h  VectorTypes.h  Version.h  Vulkan.h  WASDNodeController.h
lib/mtlpp/: mtlpp.hpp  mtlpp.mm
res/gltf2/box/: Box.gltf
res/gltf2/helmet/: DamagedHelmet.gltf
res/gltf2/helmet_skybox/: DamagedHelmet.gltf
res/gltf2/sponza/: Sponza.gltf
res/gltf2/sponza_helmet/: Box.gltf  SponzaHelmet.gltf
res/iOS/Sample/: Info.plist.in
res/macOS/: Main.storyboard
res/macOS/MetalRayTracingSample/: Main.storyboard
res/macOS/Sample/: Info.plist.in  Main.storyboard
src/Husky/: Application.cpp  BaseObject.cpp  FileStream.cpp  GeometryGenerator.cpp
src/Husky/Render/: DeferredRenderer.cpp  ForwardRenderer.cpp  TextureUploader.cpp
src/Husky/SceneV1/: Buffer.cpp  Camera.cpp  CubeTexture.cpp  Image.cpp  IndexBuffer.cpp  Mesh.cpp  Node.cpp  PbrMaterial.cpp  Primitive.cpp  Sampler.cpp  Scene.cpp  Texture.cpp  VertexBuffer.cpp
src/Husky/Vulkan/: Buffer.cpp  BufferView.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  DescriptorSetLayoutCreateInfo.cpp  DescriptorSetWrites.cpp  Device.cpp  DeviceBuffer.cpp  Fence.cpp  Framebuffer.cpp  FramebufferCreateInfo.cpp  GlslShaderCompiler.cpp  GraphicsDevice.cpp  Image.cpp  ImageView.cpp  PIpelineCache.cpp  PhysicalDevice.cpp  Pipeline.cpp  PipelineBarrier.cpp  PipelineCreateInfo.cpp  PipelineLayout.cpp  PipelineLayoutCreateInfo.cpp  Queue.cpp  RenderPass.cpp  RenderPassCreateInfo.cpp  Sampler.cpp  Semaphore.cpp  ShaderModule.cpp  Surface.cpp  Swapchain.cpp  VkException.cpp  VulkanDevice.cpp  VulkanInstance.cpp
src/Husky/glTF2/: glTFParser.cpp
src/Sample/: SampleApplication.cpp  SampleApplication.h  VulkanAllocator.cpp  main.cpp
src/Sample/common/: SampleApplication.cpp  SampleApplication.h
src/Sample/macOS/: SampleViewController.m  SampleViewController.mm
src/Sample/win32/: VulkanAllocator.h  main.cpp
src/common/Husky/: FileStream.cpp
src/common/Luch/: FileStream.cpp  MouseNodeController.cpp  WASDNodeController.cpp
src/common/Sample/: SampleApplication.cpp  SampleApplication.h
src/iOS/Sample/: main.mm
src/macOS/MetalRayTracingSample/: RayTracingSampleApplication.cpp  RayTracingSampleApplication.h  RayTracingSampleViewController.h  RayTracingSampleViewController.mm
src/macOS/Sample/: SampleViewController.h  SampleViewController.mm  main.mm
src/unix/Sample/: main.cpp
src/win32/Sample/: VulkanAllocator.h  main.cpp
(+763 files in other folders)
